test/corpus/top-level-use.txt
=========
Basic Use
=========

use error;

---

(source_file
  (toplevel_use_item
    (use_path
      (id))))

=============================
Fully qualified
=============================

use wasi:http/types@1.0.0;
use wasi:http/handler;

---

(source_file
  (toplevel_use_item
    (use_path
      (fully_qualified_use_path
        (id)
        (id)
        (id)
        (valid_semver))))
  (toplevel_use_item
    (use_path
      (fully_qualified_use_path
        (id)
        (id)
        (id)))))

========================
Alias
========================

use wasi:http/types as http-types;
use wasi:http/handler@1.2.3 as http-handler;

---

(source_file
  (toplevel_use_item
    (use_path
      (fully_qualified_use_path
        (id)
        (id)
        (id)))
    (id))
  (toplevel_use_item
    (use_path
      (fully_qualified_use_path
        (id)
        (id)
        (id)
        (valid_semver)))
    (id)))
